internal/resources/common/testdata/networkpolicy-basic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyma-project.io--test-component
  namespace: test-namespace
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: test-component
---
