internal/resources/common/testdata/networkpolicy-ingress-any.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: test
  name: kyma-project.io--test-component
  namespace: test-namespace
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: test-component
  policyTypes:
  - Ingress
---
