internal/resources/common/testdata/networkpolicy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyma-project.io--test-component
  namespace: test-namespace
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: source
    ports:
    - port: 9090
      protocol: TCP
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: global
    ports:
    - port: 9091
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: other-ns
      podSelector:
        matchLabels:
          app: external
    ports:
    - port: 9092
      protocol: TCP
  - from:
    - ipBlock:
        cidr: 10.0.0.0/8
  podSelector:
    matchLabels:
      app.kubernetes.io/name: test-component
  policyTypes:
  - Ingress
---
