internal/resources/common/testdata/networkpolicy-with-name-suffix.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyma-project.io--test-component-custom
  namespace: test-namespace
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: test-component
  policyTypes:
  - Ingress
  - Egress
---
